--- a/components/openid-token-builder/pom.xml
+++ b/components/openid-token-builder/pom.xml
@@ -19,7 +19,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>openid-token-builder</artifactId>
-	<packaging>jar</packaging>
+	<packaging>bundle</packaging>
 	<name>OpenID Token Builder</name>
 
 	<dependencies>
