--- a/features/com.wso2telco.ids.openidtokenbuilder.feature/pom.xml
+++ b/features/com.wso2telco.ids.openidtokenbuilder.feature/pom.xml
@@ -5,12 +5,12 @@
     <parent>
        <groupId>com.wso2telco.ids</groupId>
 	<artifactId>component-ids-feature</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>2.0.13-SNAPSHOT</version>
 	<relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>com.wso2telco.ids:openidtokenbuilder.feature</artifactId>
+    <artifactId>com.wso2telco.ids.openidtokenbuilder.feature</artifactId>
     <packaging>pom</packaging>
     <name>Openid Token Builder Feature</name>
     <url>http://wso2.org</url>
