--- a/features/com.wso2telco.ids.authenticationendpoint.ui.feature/pom.xml
+++ b/features/com.wso2telco.ids.authenticationendpoint.ui.feature/pom.xml
@@ -4,7 +4,7 @@
       <parent>
        <groupId>com.wso2telco.ids</groupId>
 	<artifactId>component-ids-feature</artifactId>
-        <version>2.0.13</version>
+        <version>2.0.14-SNAPSHOT</version>
 	<relativePath>../pom.xml</relativePath>
     </parent>
 
