--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 	<groupId>com.wso2telco.ids</groupId>
 	<artifactId>component-ids</artifactId>
 	<packaging>pom</packaging>
-	<version>2.0.13</version>
+	<version>2.0.14-SNAPSHOT</version>
 	<name>WSO2Telco Core - Component</name>
 	<description>WSO2Telco Core Aggregate Pom</description>
 	<url>http://wso2telco.com</url>
@@ -72,7 +72,7 @@
 		<url>https://github.com/WSO2Telco/component-ids.git</url>
 		<developerConnection>scm:git:https://github.com/WSO2Telco/component-ids.git</developerConnection>
 		<connection>scm:git:https://github.com/WSO2Telco/component-ids.git</connection>
-		<tag>component-ids-2.0.13</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 
