--- a/components/gsma-authenticators/pom.xml
+++ b/components/gsma-authenticators/pom.xml
@@ -52,12 +52,12 @@
 		<dependency>
 			<groupId>com.wso2telco.ids</groupId>
 			<artifactId>url-shorten</artifactId>
-			<version>${com.wso2telco.ids.version}</version>
+			<version>${com.wso2telco.ids.custom.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.wso2telco.ids</groupId>
 			<artifactId>authenticate-selector</artifactId>
-			<version>${com.wso2telco.ids.version}</version>
+			<version>${com.wso2telco.ids.custom.version}</version>
 		</dependency>
 		
 		<dependency>
