--- a/features/com.wso2telco.ids.authenticationendpoint.ui.feature/pom.xml
+++ b/features/com.wso2telco.ids.authenticationendpoint.ui.feature/pom.xml
@@ -99,7 +99,7 @@
                                 <artifactItem>
                                     <groupId>com.wso2telco.ids</groupId>
                                     <artifactId>authentication-endpoint</artifactId>
-                                    <version>${com.wso2telco.ids.version}</version>
+                                    <version>${com.wso2telco.ids.custom.version}</version>
                                     <type>war</type>
                                     <destFileName>authenticationendpoint.war</destFileName>
                                 </artifactItem>
