--- a/features/com.wso2telco.ids.userclaimretriever.feature/pom.xml
+++ b/features/com.wso2telco.ids.userclaimretriever.feature/pom.xml
@@ -45,7 +45,7 @@
                                 </properties>
                             </adviceFile>
                             <bundles>
-                                <bundleDef>com.wso2telco.ids:user-claim-retriever:${com.wso2telco.ids.version}</bundleDef>
+                                <bundleDef>com.wso2telco.ids:user-claim-retriever:${com.wso2telco.ids.custom.version}</bundleDef>
 				<bundleDef>org.wso2.carbon:org.wso2.carbon.logging:${carbon.kernel.version}</bundleDef>
 				<bundleDef>org.apache.amber.wso2:amber:${org.wso2.amber.version}</bundleDef>
 				<bundleDef>org.apache.sling:org.apache.sling.commons.json:${org.apache.sling.commons.json.version}</bundleDef>
