--- a/features/com.wso2telco.ids.userclaimretriever.feature/pom.xml
+++ b/features/com.wso2telco.ids.userclaimretriever.feature/pom.xml
@@ -36,16 +36,16 @@
                             <goal>p2-feature-gen</goal>
                         </goals>
                         <configuration>
-                            <id>com.wso2telco.ids.urlshorten.feature</id>
+                            <id>com.wso2telco.ids.userclaimretriever</id>
                             <propertiesFile>../feature.properties</propertiesFile>
                             <adviceFile>
                                 <properties>
                                     <propertyDef>org.wso2.carbon.p2.category.type:server</propertyDef>
-                                    <propertyDef>org.eclipse.equinox.p2.type.group:false</propertyDef>
+                                    <propertyDef>org.eclipse.equinox.p2.type.group:true</propertyDef>
                                 </properties>
                             </adviceFile>
                             <bundles>
-                                <bundleDef>com.wso2telco.ids:user-claim-retriever:${com.wso2telco.ids.custom.version}</bundleDef>
+                                <bundleDef>com.wso2telco.ids:user-claim-retriever:${com.wso2telco.ids.version}</bundleDef>
 				<bundleDef>org.wso2.carbon:org.wso2.carbon.logging:${carbon.kernel.version}</bundleDef>
 				<bundleDef>org.apache.amber.wso2:amber:${org.wso2.amber.version}</bundleDef>
 				<bundleDef>org.apache.sling:org.apache.sling.commons.json:${org.apache.sling.commons.json.version}</bundleDef>
