--- a/features/com.wso2telco.ids.userregistration.ui.feature/pom.xml
+++ b/features/com.wso2telco.ids.userregistration.ui.feature/pom.xml
@@ -100,12 +100,12 @@
                             <goal>p2-feature-gen</goal>
                         </goals>
                         <configuration>
-                            <id>com.wso2telco.ids.user-registration.feature</id>
+                            <id>com.wso2telco.ids.userregistration.ui</id>
                             <propertiesFile>../feature.properties</propertiesFile>
                             <adviceFile>
                                 <properties>
                                     <propertyDef>org.wso2.carbon.p2.category.type:server</propertyDef>
-                                    <propertyDef>org.eclipse.equinox.p2.type.group:false</propertyDef>
+                                    <propertyDef>org.eclipse.equinox.p2.type.group:true</propertyDef>
                                 </properties>
                             </adviceFile>
                             <!--bundles>
