--- a/features/com.wso2telco.ids.sign.ui.feature/pom.xml
+++ b/features/com.wso2telco.ids.sign.ui.feature/pom.xml
@@ -100,7 +100,7 @@
                             <goal>p2-feature-gen</goal>
                         </goals>
                         <configuration>
-                            <id>com.wso2telco.ids.sing.ui</id>
+                            <id>com.wso2telco.ids.sign.ui</id>
                             <propertiesFile>../feature.properties</propertiesFile>
                             <adviceFile>
                                 <properties>
