--- a/features/com.wso2telco.ids.authenticateselector.feature/pom.xml
+++ b/features/com.wso2telco.ids.authenticateselector.feature/pom.xml
@@ -36,7 +36,7 @@
                             <goal>p2-feature-gen</goal>
                         </goals>
                         <configuration>
-                            <id>com.wso2telco.ids.authenticate-selector</id>
+                            <id>com.wso2telco.ids.authenticateselector</id>
                             <propertiesFile>../feature.properties</propertiesFile>
                             <adviceFile>
                                 <properties>
