--- a/features/com.wso2telco.ids.urlshorten.feature/pom.xml
+++ b/features/com.wso2telco.ids.urlshorten.feature/pom.xml
@@ -42,9 +42,9 @@
                             <bundles>
                                 <bundleDef>com.wso2telco.ids:url-shorten</bundleDef>
                             </bundles>
-				<importFeatures>
+				<!--importFeatures>
 					<importFeatureDef>org.wso2.orbit.org.apache.httpcomponents:httpclient</importFeatureDef>
-				</importFeatures>
+				</importFeatures-->
                         </configuration>
                     </execution>
                 </executions>
