--- a/features/com.wso2telco.ids.gsmaauthenticator.feature/pom.xml
+++ b/features/com.wso2telco.ids.gsmaauthenticator.feature/pom.xml
@@ -40,6 +40,7 @@
                                 </properties>
                             </adviceFile>
                             <bundles>				
+                                <bundleDef>com.wso2telco.ids:gsma-authenticator:${com.wso2telco.ids.version}</bundleDef>
                                 <bundleDef>com.wso2telco.ids:url-shorten:${com.wso2telco.ids.version}</bundleDef>
 				<bundleDef>commons-codec.wso2:commons-codec:${commons-codec.version}</bundleDef>
                             </bundles>
