--- a/components/gsma-authenticators/pom.xml
+++ b/components/gsma-authenticators/pom.xml
@@ -74,13 +74,13 @@
 				<version>${maven.bundle.plugin.version}</version>
 				<configuration>
 					<instructions>
-						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+						<Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
 						<Bundle-Name>${project.artifactId}</Bundle-Name>
-						<Private-Package>com.wso2telco.gsma.authenticators.internal</Private-Package>
 						<Import-Package>
 						org.osgi.framework,
 			                            *;resolution:=optional
 						</Import-Package>
+						<Export-Package> com.wso2telco.gsma.authenticators.*</Export-Package>
 						<DynamicImport-Package>*</DynamicImport-Package>
 					</instructions>
 				</configuration>
