--- a/components/authenticate-selector/pom.xml
+++ b/components/authenticate-selector/pom.xml
@@ -70,9 +70,10 @@
 						org.osgi.framework,
         			                    *;resolution:=optional						
 						</Import-Package>
-						<Export-Package>com.wso2telco.gsma.authendictorselector.*</Export-Package>
-						<Export-Package>com.wso2telco.gsma.authenticators.*</Export-Package>
-						<Export-Package>com.wso2telco.gsma.utils.*</Export-Package>
+						<Export-Package>com.wso2telco.gsma.authendictorselector.*,
+								com.wso2telco.gsma.authenticators.*,
+								com.wso2telco.gsma.utils.*
+						</Export-Package>
 						<DynamicImport-Package>*</DynamicImport-Package>
 					</instructions>
 				</configuration>
