--- a/components/openid-token-builder/pom.xml
+++ b/components/openid-token-builder/pom.xml
@@ -95,15 +95,15 @@
 			                            *;resolution:=optional
 						</Import-Package>
 						<Export-Package>
-							com.wso2telco.claimhandler.*
-							com.wso2telco.claimhandler.authenticationstephandler.*
-							com.wso2telco.claimhandler.dao.*
-							com.wso2telco.claimhandler.historylog.*
-							com.wso2telco.claimhandler.model.*
-							com.wso2telco.claimhandler.openidtokenbuilder.*
-							com.wso2telco.reqpathsequencehandler.*
-							com.wso2telco.stepbasedsequencehandler.*
-							com.wso2telco.transaction.*
+							com.wso2telco.claimhandler.*,
+							com.wso2telco.claimhandler.authenticationstephandler.*,
+							com.wso2telco.claimhandler.dao.*,
+							com.wso2telco.claimhandler.historylog.*,
+							com.wso2telco.claimhandler.model.*,
+							com.wso2telco.claimhandler.openidtokenbuilder.*,
+							com.wso2telco.reqpathsequencehandler.*,
+							com.wso2telco.stepbasedsequencehandler.*,
+							com.wso2telco.transaction.*,
 							com.wso2telco.util.*
 
 						</Export-Package>
