session updater fixed

--- a/components/session-updater/pom.xml
+++ b/components/session-updater/pom.xml
@@ -63,7 +63,7 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<finalName>SessionUpdater</finalName>
+		<!--finalName>SessionUpdater</finalName-->
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
