--- a/features/com.wso2telco.ids.sessionupdater.ui.feature/pom.xml
+++ b/features/com.wso2telco.ids.sessionupdater.ui.feature/pom.xml
@@ -11,8 +11,8 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>com.wso2telco.ids.sessionupdater.ui.feature</artifactId>
     <packaging>pom</packaging>
-    <name>Session Updater</name>
-    <url>http://wso2telco.com</url>
+    <name>Session Updater Feature</name>
+    <url>http://wso2.org</url>
     
     <dependencies>          
         <dependency>
