--- a/components/gsma-authenticators/pom.xml
+++ b/components/gsma-authenticators/pom.xml
@@ -80,7 +80,7 @@
 						org.osgi.framework,
 			                            *;resolution:=optional
 						</Import-Package>
-						<Export-Package> com.wso2telco.gsma.authenticators.*</Export-Package>
+						<Export-Package> com.wso2telco.*</Export-Package>
 						<DynamicImport-Package>*</DynamicImport-Package>
 					</instructions>
 				</configuration>
