--- a/components/session-updater/pom.xml
+++ b/components/session-updater/pom.xml
@@ -53,10 +53,20 @@
 			<artifactId>servlet-api</artifactId>
 		</dependency>
 		<dependency>
-                       <groupId>org.apache.cxf.wso2</groupId>
-                       <artifactId>cxf-bundle</artifactId>
-                       <scope>provided</scope>
-               </dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-server</artifactId>
+			<version>1.17.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-core</artifactId>
+			<version>1.17.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-servlet</artifactId>
+			<version>1.17.1</version>
+		</dependency>
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
