--- a/components/user-registration/src/main/webapp/WEB-INF/web.xml
+++ b/components/user-registration/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
         <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>com.sun.jersey.config.property.packages</param-name>
-            <param-value>com.mycompany.mavenproject1</param-value>
+            <param-value>com.wso2telco</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
