--- a/components/openid-token-builder/pom.xml
+++ b/components/openid-token-builder/pom.xml
@@ -91,8 +91,12 @@
 						<Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
 						<Bundle-Name>${project.artifactId}</Bundle-Name>
 						<Import-Package>
-						org.osgi.framework,
-			                            *;resolution:=optional
+						org.apache.commons.logging.*; version="1.0.4",
+                            org.wso2.carbon.identity.base.*,
+                            org.wso2.carbon.identity.core.*,
+                            org.wso2.carbon.identity.oauth.*,
+                            org.wso2.carbon.identity.openidconnect.*,
+                            *;resolution:=optional
 						</Import-Package>
 						<Export-Package>
 							com.wso2telco.claimhandler.*,
