--- a/components/gsma-authenticators/pom.xml
+++ b/components/gsma-authenticators/pom.xml
@@ -76,6 +76,7 @@
 					<instructions>
 						<Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
 						<Bundle-Name>${project.artifactId}</Bundle-Name>
+						<Bundle-Activator> com.wso2telco.gsma.authenticators.internal.Activator</Bundle-Activator>
 						<Import-Package>
 org.apache.commons.logging.*; version="1.0.4",
                                                         org.osgi.framework,
