--- a/components/gsma-authenticators/pom.xml
+++ b/components/gsma-authenticators/pom.xml
@@ -76,16 +76,13 @@
 					<instructions>
 						<Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
 						<Bundle-Name>${project.artifactId}</Bundle-Name>
-						<Bundle-Activator> com.wso2telco.gsma.authenticators.internal.Activator</Bundle-Activator>
+						<Bundle-Activator>com.wso2telco.gsma.authenticators.internal.Activator</Bundle-Activator>
 						<Import-Package>
-org.apache.commons.logging.*; version="1.0.4",
-                                                        org.osgi.framework,
+							org.apache.commons.logging.*; version="1.0.4",org.osgi.framework,
                             org.wso2.carbon.identity.application.authentication.framework.*,
-                            javax.servlet;version="[2.6.0, 3.0.0)",
-                            javax.servlet.http;version="[2.6.0, 3.0.0)",
-                                                        *;resolution:=optional
+                            javax.servlet;version="[2.6.0, 3.0.0)",javax.servlet.http;version="[2.6.0, 3.0.0)",*;resolution:=optional
 						</Import-Package>
-						<Export-Package> com.wso2telco.*</Export-Package>
+						<Export-Package>com.wso2telco.*</Export-Package>
 						<DynamicImport-Package>*</DynamicImport-Package>
 					</instructions>
 				</configuration>
