--- a/components/openid-token-builder/pom.xml
+++ b/components/openid-token-builder/pom.xml
@@ -8,13 +8,14 @@
 	OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
 	the specific language governing permissions and limitations under the License. -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<parent>
 		<groupId>com.wso2telco.ids</groupId>
 		<artifactId>component-ids-parent</artifactId>
-                <version>2.0.19-SNAPSHOT</version>
-                <relativePath>../../parent/pom.xml</relativePath>
+		<version>2.0.19-SNAPSHOT</version>
+		<relativePath>../../parent/pom.xml</relativePath>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
@@ -26,15 +27,15 @@
 		<dependency>
 			<groupId>org.apache.amber.wso2</groupId>
 			<artifactId>amber</artifactId>
-		</dependency>	
+		</dependency>
 		<dependency>
 			<groupId>org.wso2.carbon.identity</groupId>
 			<artifactId>org.wso2.carbon.identity.oauth</artifactId>
-		</dependency>	
-			<dependency>
-				<groupId>org.wso2.carbon.identity</groupId>
-				<artifactId>org.wso2.carbon.identity.application.common</artifactId>
-			</dependency>
+		</dependency>
+		<dependency>
+			<groupId>org.wso2.carbon.identity</groupId>
+			<artifactId>org.wso2.carbon.identity.application.common</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>com.wso2telco.core</groupId>
 			<artifactId>dbutils</artifactId>
@@ -52,14 +53,14 @@
 			<artifactId>org.wso2.carbon.logging</artifactId>
 		</dependency>
 		<dependency>
-				<groupId>commons-httpclient.wso2</groupId>
-				<artifactId>commons-httpclient</artifactId>
-			</dependency>
+			<groupId>commons-httpclient.wso2</groupId>
+			<artifactId>commons-httpclient</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.sling</groupId>
 			<artifactId>org.apache.sling.commons.json</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.jayway.jsonpath</groupId>
 			<artifactId>json-path</artifactId>
@@ -73,8 +74,8 @@
 			<artifactId>gsma-authenticator</artifactId>
 		</dependency>
 	</dependencies>
-	
-	
+
+
 	<build>
 		<plugins>
 			<plugin>
@@ -87,39 +88,60 @@
 						<Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
 						<Bundle-Name>${project.artifactId}</Bundle-Name>
 						<Import-Package>
-						 javax.xml.namespace,
-                            javax.xml.stream,
-                            org.eclipse.equinox.http.helper,
+							javax.xml.namespace,
+							javax.xml.stream,
+							org.eclipse.equinox.http.helper,
 
-                            javax.servlet.*; version="${imp.pkg.version.javax.servlet}",
-                            org.apache.axiom.*; version="${axiom.osgi.version.range}",
-                            org.apache.commons.lang; version="${commons-lang.wso2.osgi.version.range}",
-                            org.apache.commons.logging; version="${commons-logging.osgi.version.range}",
-                            org.osgi.framework; version="${osgi.framework.imp.pkg.version.range}",
-                            org.osgi.service.component; version="${osgi.service.component.imp.pkg.version.range}",
-                            org.osgi.service.http; version="${osgi.service.http.imp.pkg.version.range}",
-                            org.osgi.util.tracker; version="${osgi.util.tracker.imp.pkg.version.range}",
+							javax.servlet.*; version="${imp.pkg.version.javax.servlet}",
+							org.apache.axiom.*; version="${axiom.osgi.version.range}",
+							org.apache.commons.lang; version="${commons-lang.wso2.osgi.version.range}",
+							org.apache.commons.logging;
+							version="${commons-logging.osgi.version.range}",
+							org.osgi.framework;
+							version="${osgi.framework.imp.pkg.version.range}",
+							org.osgi.service.component;
+							version="${osgi.service.component.imp.pkg.version.range}",
+							org.osgi.service.http;
+							version="${osgi.service.http.imp.pkg.version.range}",
+							org.osgi.util.tracker;
+							version="${osgi.util.tracker.imp.pkg.version.range}",
 
-                            org.wso2.carbon.user.api; version="${carbon.user.api.imp.pkg.version.range}",
+							org.wso2.carbon.user.api;
+							version="${carbon.user.api.imp.pkg.version.range}",
 
-                            org.wso2.carbon.registry.core.*; version="${carbon.kernel.registry.imp.pkg.version}",
+							org.wso2.carbon.registry.core.*;
+							version="${carbon.kernel.registry.imp.pkg.version}",
 
-                            org.wso2.carbon; version="${carbon.kernel.package.import.version.range}",
-                            org.wso2.carbon.context; version="${carbon.kernel.package.import.version.range}",
-                            org.wso2.carbon.core.util; version="${carbon.kernel.package.import.version.range}",
-                            org.wso2.carbon.ui; version="${carbon.kernel.package.import.version.range}",
-                            org.wso2.carbon.user.core.*; version="${carbon.kernel.package.import.version.range}",
-                            org.wso2.carbon.utils.*; version="${carbon.kernel.package.import.version.range}",
+							org.wso2.carbon;
+							version="${carbon.kernel.package.import.version.range}",
+							org.wso2.carbon.context;
+							version="${carbon.kernel.package.import.version.range}",
+							org.wso2.carbon.core.util;
+							version="${carbon.kernel.package.import.version.range}",
+							org.wso2.carbon.ui;
+							version="${carbon.kernel.package.import.version.range}",
+							org.wso2.carbon.user.core.*;
+							version="${carbon.kernel.package.import.version.range}",
+							org.wso2.carbon.utils.*;
+							version="${carbon.kernel.package.import.version.range}",
 
-                            org.wso2.carbon.stratos.common.*; version="${carbon.commons.imp.pkg.version}",
+							org.wso2.carbon.stratos.common.*;
+							version="${carbon.commons.imp.pkg.version}",
 
-                            org.wso2.carbon.claim.mgt; version="${carbon.identity.package.import.version.range}",
-                            org.wso2.carbon.identity.application.common.*; version="${carbon.identity.package.import.version.range}",
-                            org.wso2.carbon.identity.application.mgt; version="${carbon.identity.package.import.version.range}",
-                            org.wso2.carbon.identity.base; version="${carbon.identity.package.import.version.range}",
-                            org.wso2.carbon.identity.core.*; version="${carbon.identity.package.import.version.range}",
-                            org.wso2.carbon.identity.user.profile.mgt; version="${carbon.identity.package.import.version.range}",
-                            org.wso2.carbon.idp.mgt; version="${carbon.identity.package.import.version.range}"
+							org.wso2.carbon.claim.mgt;
+							version="${carbon.identity.package.import.version.range}",
+							org.wso2.carbon.identity.application.common.*;
+							version="${carbon.identity.package.import.version.range}",
+							org.wso2.carbon.identity.application.mgt;
+							version="${carbon.identity.package.import.version.range}",
+							org.wso2.carbon.identity.base;
+							version="${carbon.identity.package.import.version.range}",
+							org.wso2.carbon.identity.core.*;
+							version="${carbon.identity.package.import.version.range}",
+							org.wso2.carbon.identity.user.profile.mgt;
+							version="${carbon.identity.package.import.version.range}",
+							org.wso2.carbon.idp.mgt;
+							version="${carbon.identity.package.import.version.range}"
 						</Import-Package>
 						<Export-Package>
 							com.wso2telco.*
@@ -130,6 +152,19 @@
 						<DynamicImport-Package>*</DynamicImport-Package>
 					</instructions>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-scr-plugin</artifactId>
+				<version>1.9.0</version>
+				<executions>
+					<execution>
+						<id>generate-scr-scrdescriptor</id>
+						<goals>
+							<goal>scr</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
