--- a/components/authentication-endpoint/pom.xml
+++ b/components/authentication-endpoint/pom.xml
@@ -53,6 +53,12 @@
 			<groupId>commons-codec.wso2</groupId>
 			<artifactId>commons-codec</artifactId>
 		</dependency>
+		<dependency>
+		<groupId>org.wso2.carbon.identity</groupId>
+		<artifactId>org.wso2.carbon.identity.application.authentication.framework</artifactId>
+		<version>5.0.7</version>
+		<scope>provided</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
