--- a/components/openid-token-builder/pom.xml
+++ b/components/openid-token-builder/pom.xml
@@ -25,10 +25,6 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.apache.amber.wso2</groupId>
-			<artifactId>amber</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>org.wso2.carbon.identity</groupId>
 			<artifactId>org.wso2.carbon.identity.oauth</artifactId>
 		</dependency>
@@ -57,14 +53,10 @@
 			<artifactId>commons-httpclient</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.sling</groupId>
-			<artifactId>org.apache.sling.commons.json</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>com.jayway.jsonpath</groupId>
+			<groupId>com.jayway.jsonpath.wso2</groupId>
 			<artifactId>json-path</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>org.wso2.carbon.identity</groupId>
 			<artifactId>org.wso2.carbon.identity.core</artifactId>
@@ -72,6 +64,10 @@
 		<dependency>
 			<groupId>com.wso2telco.ids</groupId>
 			<artifactId>gsma-authenticator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.json.wso2</groupId>
+			<artifactId>json</artifactId>
 		</dependency>
 	</dependencies>
 
@@ -92,9 +88,12 @@
 							javax.xml.stream,
 							org.eclipse.equinox.http.helper,
 
-							javax.servlet.*; version="${imp.pkg.version.javax.servlet}",
-							org.apache.axiom.*; version="${axiom.osgi.version.range}",
-							org.apache.commons.lang; version="${commons-lang.wso2.osgi.version.range}",
+							javax.servlet.*;
+							version="${imp.pkg.version.javax.servlet}",
+							org.apache.axiom.*;
+							version="${axiom.osgi.version.range}",
+							org.apache.commons.lang;
+							version="${commons-lang.wso2.osgi.version.range}",
 							org.apache.commons.logging;
 							version="${commons-logging.osgi.version.range}",
 							org.osgi.framework;
