--- a/components/user-registration/pom.xml
+++ b/components/user-registration/pom.xml
@@ -18,7 +18,7 @@
 	<parent>
 		<groupId>com.wso2telco.ids</groupId>
 		<artifactId>component-ids-parent</artifactId>
-		<version>2.0.02</version>
+		<version>2.0.22-SNAPSHOT</version>
 		<relativePath>../../parent/pom.xml</relativePath>
 	</parent>
 
