--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -1951,6 +1951,11 @@
 			<version>${com.sun.jersey.version}</version>
 		</dependency>
 
+		 <dependency>
+                        <groupId>org.codehaus.jettison.wso2</groupId>
+                        <artifactId>jettison</artifactId>
+                        <version>${org.codehaus.jettison.wso2.version}</version>
+                </dependency>
 
 
 
@@ -1958,6 +1963,7 @@
 
 	</dependencyManagement>
 	<properties>
+		<org.codehaus.jettison.wso2.version>1.3.4.wso2v1</org.codehaus.jettison.wso2.version>
 		<net.minidev.wso2.version>2.1.0.wso2v1</net.minidev.wso2.version>
 		<com.jayway.jsonpath.wso2.version>1.2.0.wso2v1</com.jayway.jsonpath.wso2.version>
 
