remove jersey dependancies

--- a/components/user-registration/pom.xml
+++ b/components/user-registration/pom.xml
@@ -1,19 +1,13 @@
-<!--
-  Copyright  (c) 2015-2016, WSO2.Telco Inc. (http://www.wso2telco.com) All Rights Reserved.
-  
-  WSO2.Telco Inc. licences this file to you under the Apache License, Version 2.0 (the "License");
-  you may not use this file except in compliance with the License.
-  You may obtain a copy of the License at
-  
-    http://www.apache.org/licenses/LICENSE-2.0
-  
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License.
--->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<!-- Copyright (c) 2015-2016, WSO2.Telco Inc. (http://www.wso2telco.com) 
+	All Rights Reserved. WSO2.Telco Inc. licences this file to you under the 
+	Apache License, Version 2.0 (the "License"); you may not use this file except 
+	in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
+	Unless required by applicable law or agreed to in writing, software distributed 
+	under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
+	OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
+	the specific language governing permissions and limitations under the License. -->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<parent>
 		<groupId>com.wso2telco.ids</groupId>
@@ -22,8 +16,8 @@
 		<relativePath>../../parent/pom.xml</relativePath>
 	</parent>
 
-	<modelVersion>4.0.0</modelVersion>	
-	<artifactId>user-registration</artifactId>	
+	<modelVersion>4.0.0</modelVersion>
+	<artifactId>user-registration</artifactId>
 	<packaging>war</packaging>
 
 	<name>User Registration - Webapps</name>
@@ -43,25 +37,21 @@
 		</dependency>
 		<!--dependency> <groupId>com.google.gson</groupId> <artifactId>gson</artifactId> 
 			<version>1.0.0</version> </dependency -->
-		<!--dependency>
-			<groupId>org.json</groupId>
+		<!--dependency> <groupId>org.json</groupId> <artifactId>json</artifactId> 
+			<version>20090211</version> <scope>provided</scope> </dependency -->
+		<dependency>
+			<groupId>org.json.wso2</groupId>
 			<artifactId>json</artifactId>
-			<version>20090211</version>
-			<scope>provided</scope>
-		</dependency-->
-		<dependency>
-				<groupId>org.json.wso2</groupId>
-				<artifactId>json</artifactId>
 		</dependency>
-		<dependency>
+		<!-- dependency>
 			<groupId>com.atlassian.httpclient</groupId>
 			<artifactId>atlassian-httpclient-plugin</artifactId>
 			<type>jar</type>
-		</dependency>
+		</dependency-->
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<!--version>4.4-alpha1-SNAPSHOT</version-->
+			<!--version>4.4-alpha1-SNAPSHOT</version -->
 			<type>jar</type>
 		</dependency>
 		<dependency>
@@ -70,11 +60,11 @@
 			<scope>provided</scope>
 			<type>jar</type>
 		</dependency>
-		<dependency>
+		<!-- dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-web-api</artifactId>
 			<scope>provided</scope>
-		</dependency>
+		</dependency-->
 		<dependency>
 			<groupId>org.wso2.carbon</groupId>
 			<artifactId>org.wso2.carbon.authenticator.stub</artifactId>
@@ -138,38 +128,28 @@
 			<scope>provided</scope>
 			<type>jar</type>
 		</dependency>
-		<dependency>
+		<!-- dependency>
 			<groupId>com.ibm.icu</groupId>
 			<artifactId>icu4j</artifactId>
-		</dependency>
+		</dependency-->
 
-		
-		<dependency>
-			<groupId>com.sun.jersey</groupId>
-			<artifactId>jersey-json</artifactId>
-		</dependency>
-		
-		<dependency>
-			<groupId>com.sun.jersey</groupId>
-			<artifactId>jersey-client</artifactId>
-		</dependency>
+		<!--dependency> <groupId>com.sun.jersey</groupId> <artifactId>jersey-client</artifactId> 
+			</dependency -->
 
-        <dependency>
-            <groupId>com.sun.jersey</groupId>
-            <artifactId>jersey-server</artifactId>
-            <version>1.17.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.sun.jersey</groupId>
-            <artifactId>jersey-core</artifactId>
-            <version>1.17.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.sun.jersey</groupId>
-            <artifactId>jersey-servlet</artifactId>
-            <version>1.17.1</version>
-        </dependency>
-		
+		<!--dependency> <groupId>com.sun.jersey</groupId> <artifactId>jersey-server</artifactId> 
+			<version>1.17.1</version> </dependency -->
+
+		<!-- dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-core</artifactId>
+			<version>1.17.1</version>
+		</dependency-->
+		<!-- dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-servlet</artifactId>
+			<version>1.17.1</version>
+		</dependency-->
+
 		<dependency>
 			<groupId>com.wso2telco.ids</groupId>
 			<artifactId>url-shorten</artifactId>
@@ -186,12 +166,12 @@
 				<configuration>
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 					<webResources>
-                        <resource>
-                            <!-- this is relative to the pom.xml directory -->
-                            <directory>src/main/webapp</directory>
-                        </resource>
-                    </webResources>
-                    <warName>user-registration</warName>
+						<resource>
+							<!-- this is relative to the pom.xml directory -->
+							<directory>src/main/webapp</directory>
+						</resource>
+					</webResources>
+					<warName>user-registration</warName>
 				</configuration>
 			</plugin>
 			<plugin>
