chenge ssession updater

--- a/components/session-updater/src/main/resources/application.properties
+++ b/components/session-updater/src/main/resources/application.properties
@@ -21,7 +21,7 @@ smpp_port_list=2645;7781;7756;8867
 #ussd API url
 ussdsend=https://apimanager.example.com:8243/ussd/v1/outbound
 #Session updater call back URL
-notifyurl=https://identity.example.com/sessionupdater/tnspoints/endpoint/ussd/pin
+notifyurl=https://localhost:9763/sessionupdater/tnspoints/endpoint/ussd/pin
 #authorization token to access the ussd api
 accesstoken=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 shortcode=tel:1721
